src/test/compile-fail/liveness-swap-uninit.rs
fn main() {
	let x = 3;
	let y;
	x <-> y; //! ERROR use of variable that may not have been initialized
}
